force-app/main/default/objects/Forecast_Snapshot_Logistics__c/Forecast_Snapshot_Logistics__c.object-meta.xml
<CustomObject>
    <description>Object to capture the analytic snapshots with focus on logistics.</description>
    <label>Forecast Snapshot Logistics</label>
    <nameField>
        <label>Forecast Snapshot-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Snapshots Logistics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>