force-app/main/default/objects/Forecast_Snapshot_Logistics__c/fields/Actual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sales__c</fullName>
    <label>Actual Sales</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>