force-app/main/default/objects/Forecast_Snapshot_Logistics__c/fields/Forecast_Manual__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Manual__c</fullName>
    <label>Forecast Manual</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>