force-app/main/default/objects/Forecast_Snapshot_Logistics__c/fields/Forecast_Optimum__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Optimum__c</fullName>
    <label>Forecast Optimum</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>