force-app/main/default/objects/Forecast_Snapshot_Logistics__c/fields/Forecast_Sales__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Sales__c</fullName>
    <label>Forecast Sales</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>