force-app/main/default/objects/Forecast_Snapshot_Logistics__c/fields/Reporting_Category__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Category__c</fullName>
    <label>Reporting Category</label>
    <length>30</length>
    <type>Text</type>
</CustomField>