force-app/main/default/objects/Forecast_Snapshot_Logistics__c/listViews/Correct_Reporting_Category.listView-meta.xml
<ListView>
    <fullName>Correct_Reporting_Category</fullName>
    <columns>NAME</columns>
    <columns>Snapshot_Date__c</columns>
    <columns>Month__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Reporting_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reporting_Category__c</field>
        <operation>startsWith</operation>
        <value>2G,4G</value>
    </filters>
    <label>Correct Reporting Category</label>
</ListView>